{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 92,
  "lineage": "172e59cf-0609-c4a6-a857-0643af0eb52e",
  "resources": [
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:411307360300:internet-gateway/igw-04399ca13f4970c15",
            "id": "igw-04399ca13f4970c15",
            "owner_id": "411307360300",
            "region": "ap-south-1",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-003fbb68bfeea017e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:411307360300:route-table/rtb-03063453050726f79",
            "id": "rtb-03063453050726f79",
            "owner_id": "411307360300",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04399ca13f4970c15",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "timeouts": null,
            "vpc_id": "vpc-003fbb68bfeea017e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "411307360300",
            "id": "rtb-03063453050726f79",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d2233257e0f4a81",
            "region": "ap-south-1",
            "route_table_id": "rtb-03063453050726f79",
            "subnet_id": "subnet-0d46e8b36d60c5935"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route_table.public-route",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:411307360300:subnet/subnet-0d46e8b36d60c5935",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d46e8b36d60c5935",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "411307360300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "ClientName": "Thermax"
            },
            "tags_all": {
              "ClientName": "Thermax"
            },
            "vpc_id": "vpc-003fbb68bfeea017e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "411307360300",
            "id": "subnet-0d46e8b36d60c5935",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:411307360300:vpc/vpc-003fbb68bfeea017e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09f8c13506670e72e",
            "default_route_table_id": "rtb-0e3f47cb630f23a4b",
            "default_security_group_id": "sg-0c6299c01aad3a15a",
            "dhcp_options_id": "dopt-092ed468c86c8d4c3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-003fbb68bfeea017e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e3f47cb630f23a4b",
            "owner_id": "411307360300",
            "region": "ap-south-1",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "411307360300",
            "id": "vpc-003fbb68bfeea017e",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.aws_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:411307360300:security-group/sg-00bddb6a5566ca459",
            "description": "Allow SSH \u0026 HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bddb6a5566ca459",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "411307360300",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-003fbb68bfeea017e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "411307360300",
            "id": "sg-00bddb6a5566ca459",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:411307360300:instance/i-096cd26fc46d3b444",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096cd26fc46d3b444",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f80850c6ec3ec9d5"
              }
            ],
            "primary_network_interface_id": "eni-0f80850c6ec3ec9d5",
            "private_dns": "ip-10-0-1-16.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.16",
            "public_ip": "15.207.103.122",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07bebc057828f1aba",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d46e8b36d60c5935",
            "tags": {
              "Name": "Terraform-EC2-Instance"
            },
            "tags_all": {
              "Name": "Terraform-EC2-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00bddb6a5566ca459"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "411307360300",
            "id": "i-096cd26fc46d3b444",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.aws_security_group.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}